# study

./: README.md
Graphic1/: Graphic1.pro  mainwindow.ui
artificial intelligence/ML/: README.md  report_lab0.docx  report_lab1.docx  report_lab2.docx
computer graphic/: course project  lab1.py
computer graphic/course project/: README.md
computer graphic/lab1/: mainwindow.cpp  mainwindow.h
computer graphic/lab2/: README.py  code.cpp  lab2_report.docx
computer graphic/lab3456/: README.py  code.py
computer graphic/lab7/: README.md  code.py
discrete analysis/: suffix_tree
discrete analysis/course project/: README.md  spell_checker.cpp
discrete analysis/lab1/: README.md  radix_sort.cpp
discrete analysis/lab2/: README.md  rb_tree.cpp
discrete analysis/lab4/: aho.cpp
discrete analysis/lab6/: calc.cpp
discrete analysis/lab7/: dyn.cpp
discrete analysis/lab8/: greed.cpp
discrete analysis/lab9/: bellman_ford.cpp
numeric methods/1/1.1/: CMakeLists.txt  LU.cpp  a.out  main.cpp  matrix.txt
numeric methods/1/1.1/include/: matrix.cpp  matrix.h  operations.cpp  vector.cpp  vector.h
numeric methods/1/1.3/: CMakeLists.txt  I_S.cpp  LU.cpp  a.out  main.cpp  matrix.txt
numeric methods/1/1.3/include/: matrix.cpp
numeric methods/2/2.2/: CMakeLists.txt  main.cpp
numeric methods/2/2.2/include/: LU.h  matrix.cpp  matrix.h  operations.cpp
numeric methods/cours/: log.txt  pcm_pro.py  Курсовая_ЧМ.docx
operating systems/: t_client.cpp  t_server.cpp
operating systems/course project/: README.md  t_client.cpp  t_server.cpp
operating systems/couse project/: t_server.cpp
operating systems/lab2/: README.md  calculator.cpp
operating systems/lab3/: README.md  quick_sort_multithreaded.cpp
operating systems/lab4/: README.md  text_proc.cpp
operating systems/lab5/: README.md  answer.cpp  send.cpp
(+49 files in other folders)
